增加接口依赖相关内容

--- a/configs/online.conf
+++ b/configs/online.conf
@@ -1,6 +1,15 @@
 # 接口环境地址
 [api]
-url_pre = http://172.31.46.37:8200
+url_pre = http://172.31.46.37:8205
+
+#基础数据
+[basic]
+normal_user =  sh
+normal_pwd = srg
+normal_member_id = sreg
+admin_user = sreh
+admin_pwd = sreh
+loan_member_id = serh
 
 #日志级别
 [log]
