--- a/configs/test.conf
+++ b/configs/test.conf
@@ -6,6 +6,15 @@ url_pre = http://172.31.46.37:8205
 [log]
 level = ERROR
 
+#基础数据
+[basic]
+normal_user =  sh
+normal_pwd = srg
+normal_member_id = sreg
+admin_user = sreh
+admin_pwd = sreh
+loan_member_id = serh
+
 # Oracle数据库连接参数
 [Oracle]
 host = 172.31.98.189
